# hexasense

./: .gitattributes  .gitignore  .gitmodules  README.md  main.c  monika
enclosure/: Assembly1.iam  Assembly1.ipn  Enclosure-bottom.ipt  Oberschale.ipt  Oberschale.stl  PCB-Model.ipt  README  Unterschale.ipt  config.scad  enclosure1.ipt  enclosure2.ipt  enclosure2.stl  main.scad  platine-aufriss.dxf
enclosure/OldVersions/: PCB-Model.0001.ipt  enclosure2.0001.ipt
enclosure/power_board/: Assembly1.iam  Assembly1.ipn  Assembly2.iam  Oberschale.ipt  Oberschale.stl  Oberschale2.ipt  Oberschale2.stl  PCB-Model.ipt  Unterschale.ipt  Unterschale.stl  Unterschale2.ipt  Unterschale2.stl
enclosure/sense_board/: Assembly1.iam  PCB-Model.ipt  base.ipt  base.stl  frontplatte.dwg  frontplatte.dxf  frontplatte.ipt  pushbutton.ipt  pushbutton.stl
enclosure/sense_board_v2/: Assembly1.iam  Gehaeuse.ipt  Jig_Power.ipt  Jig_Power.stl  Knoepfe.stl  Mockup_Platinen.ipt  Oberschale.stl  Programming_Jig_Holder.ipt  Programming_Jig_Holder.stl  STAENDER-rotiert.stl  STAENDER.IPT  STAENDER.stl  Sense_Board.ipj  Unterschale.stl
firmware/: Makefile  adc.c  adc.h  adc_temp_conversion.c  adc_temp_conversion.h  button.c  button.h  conversion.c  conversion.h  dew_point.c  dht_sensor.h  hw_config.h  led_driver.c  led_driver.h  main.c  uart.c
firmware/at45-eeprom-test/: Makefile  (+22 more)
hardware/: Reichelt.lbr  calibration-rig.sch  hexabus.lbr  hexasense.brd  hexasense.sch  power.brd  power.sch
hostsoftware/at45_tools/libat45tools/: CMakeLists.txt  buspirate.cpp  buspirate.hpp  common.cpp  common.hpp  compat.hpp  config.h.in  error.hpp
hostsoftware/at45_tools/src/: CMakeLists.txt  at45_imguploader.cpp
(+33 files in other folders)
